tests/baselines/reference/objectTypesWithOptionalProperties.errors.txt
==== tests/cases/compiler/objectTypesWithOptionalProperties.ts (6 errors) ====
    // Basic uses of optional properties
    
    var a: {
        x?: number; // ok
    }
    
    interface I {
        x?: number; // ok
    }
    
    class C {
        x?: number; // error
         ~
!!! error TS1005: ';' expected.
          ~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
    }
    
    interface I2<T> {
        x?: T; // ok
    }
    
    class C2<T> {
        x?: T; // error
         ~
!!! error TS1005: ';' expected.
          ~
!!! error TS1008: Unexpected token; 'constructor, function, accessor or variable' expected.
    }
    
    var b = {
        x?: 1 // error
         ~
!!! error TS1005: ':' expected.
          ~
!!! error TS1003: Identifier expected.
    }